複数ページのコンパイルに対応

--- a/src/index.pug
+++ b/src/index.pug
@@ -10,5 +10,6 @@ html(lang="ja")
     include ./components/header
     main 
       h1 LPテンプレート
+      a(href="./sample.pug") ページ遷移
     include ./components/footer
     script(type="module" src="./scripts/index.ts")
