セッティング

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,2 +1,7 @@
+// global
+@use "./global/mixin.scss";
+@use "./global/reset.scss";
+
+// components
 @use "./components/header.scss";
 @use "./components/footer.scss";
