--- a/src/components/layout.pug
+++ b/src/components/layout.pug
@@ -11,4 +11,4 @@ html(lang="ja")
     include ./header
     block body
     include ./footer
-    script(type="module" src="./scripts/index.ts")
+    script(type="module", src="./scripts/index.ts")
