add: ヘッダー作成

--- a/src/components/header.pug
+++ b/src/components/header.pug
@@ -1,3 +1,4 @@
-header.l-container.l-header
-  .l-header-image
-    img(src="./assets/images/logo.svg", alt="logo")
+header.l-header
+  .l-header__inner.l-container
+    .l-header__image
+      img(src="./assets/images/logo.svg", alt="logo")
