--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -1,8 +1,28 @@
+@use "../global/mixin.scss" as *;
+
 header {
   font-weight: bold;
 }
 .l-header {
+  width: 100%;
   height: 80px;
-  display: flex;
   align-items: center;
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.05);
+  @include md {
+    height: 56px;
+  }
+}
+
+.l-header__inner {
+  height: 100%;
+  text-align: left;
+}
+.l-header__image {
+  padding-top: 20px;
+  img {
+    width: 120.97px;
+    @include md {
+      width: 76.98px;
+    }
+  }
 }
