--- a/src/sections/introduction.pug
+++ b/src/sections/introduction.pug
@@ -1,1 +1,25 @@
-.p-notes.l-container dサービスオンラインカウンターへようこそ
+.p-introduction
+  .l-container.p-introduction__inner
+    .p-introduction__description
+      p.p-introduction__title--en ONLINE COUNTER
+      h1.p-introduction__title--ja
+        span dサービス<br>オンラインカウンター
+        | へ<br>ようこそ
+      .p-introduction__image--sp
+        img(src="./assets/images/mv-woman.png", alt="女性の画像")
+      p.p-introduction__text
+        span dサービスオンラインカウンター
+        | では、オンラインでドコモの各種サービス※に関する相談を承っております。<br>ドコモのスタッフが
+        span お客様のライフスタイルにぴったりなサービス選び
+        | のお手伝いをさせていただきます。
+      p.p-introduction__text
+        span ぜひお気軽にご相談ください。
+      .p-introduction__service
+        p.p-introduction-service__title 相談対象サービス
+        ul.p-introduction-service__list
+          li
+            span Disney+、dTV、dヒッツ、dマガジン、DAZN for docomo、dヘルスケア、dキッズ、dフォト、dアニメストア、 いちおしパック
+          li
+            span dカードGOLD、dカードレギュラー
+    .p-introduction__image--pc
+      img(src="./assets/images/mv-woman.png", alt="女性の画像")
