--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,6 +1,7 @@
 // global
 @use "./global/mixin.scss";
 @use "./global/reset.scss";
+@use "./global/base.scss";
 
 // components
 @use "./components/header.scss";
