add: 推奨環境作成

--- a/src/sections/environment.pug
+++ b/src/sections/environment.pug
@@ -1,1 +1,15 @@
-.p-environment.l-container 推奨環境
+.p-environment.l-container
+  .p-environment__inner
+    p.p-environment__title 推奨環境
+    .p-environment__contents
+      .p-environment__item
+        p.p-environment-item__title デバイス
+        .p-environment-item__list
+          ul
+            li PCの場合
+              p Windows : Windows 10、32 ビットおよび 64 ビット以降｜ Mac : OS X 10.12 以降
+            li スマートフォン、タブレットの場合
+              p iPhone : iOS13以上 | Android : Android9以上
+      .p-environment__item
+        p.p-environment-item__title ブラウザ
+        .p-environment-item__text Google Chrome、Mozilla Firefox、Chromium Edge 、<br>Safari の最新バージョンをご利用ください。
