add: 共通コンテナー調整、注意事項作成

--- a/src/sections/notes.pug
+++ b/src/sections/notes.pug
@@ -1,1 +1,14 @@
-.p-notes.l-container 注意事項
+.p-notes
+  .l-container
+    .p-notes__title 注意事項
+    ul.p-notes__text
+      li
+        span 本通話は、サービス品質向上のため、録音・録画させていただきます。ご同意の上ご利用いただきますこと、あらかじめご了承ください。
+      li
+        span 通話開始時、お客様映像についてはカメラONがデフォルトとなっておりますが、通話開始後にOFFにすることが可能です。またプライバシー保護の観点から、「背景ぼかし」設定を行なっております。不要な場合は、通話開始後に解除することが可能です。
+      li
+        span 応対内容によっては電話番号や氏名等のお客様情報をお話しいただく場合がございますので、周囲に人がいない場所でアクセスいただきますようお願いいたします。
+      li
+        span 通信はWi-Fi接続での利用を推奨します。Wi-Fi接続以外での通信の場合データ通信料が発生します。
+      li
+        span 通信環境により、通話が途中で切断されてしまった場合、手続きが中断となるため、再度接続し、手続きを行なってください。
